// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleDetails country code MX should match snapshot 1`] = `
<Col
  gridGap={10}
  width="95%"
>
  <Row
    alignItems="center"
    gridGap={10}
  >
    <IconCalendarFill
      aria-hidden={true}
      display="block"
      size={16}
    />
    <Row
      alignItems="center"
      gridGap={3}
    >
      <Text
        font="primary"
        fontSize="T200"
        fontWeight="bold"
        hyphens="none"
      >
        Start Date
        : 
      </Text>
      <Text
        font="primary"
        fontSize="T100"
        hyphens="none"
      >
        Oct 29, 2022
      </Text>
    </Row>
  </Row>
  <Row
    alignItems="center"
    gridGap={10}
  >
    <IconClockFill
      aria-hidden={true}
      display="block"
      size={16}
    />
    <Row
      alignItems="center"
      gridGap={3}
    >
      <Text
        font="primary"
        fontSize="T200"
        fontWeight="bold"
        hyphens="none"
      >
        Shift
        : 
      </Text>
      <Text
        font="primary"
        fontSize="T100"
        hyphens="none"
      >
        Thu, Fri, Sat, Sun 9:00 AM - 1:00 PM
      </Text>
    </Row>
  </Row>
  <Col
    alignItems="left"
    gridGap={5}
    padding={
      Object {
        "left": "S400",
      }
    }
  >
    <Text
      font="primary"
      fontSize="T200"
      hyphens="none"
      style={
        Object {
          "fontStyle": "italic",
        }
      }
    >
      Required training dates
    </Text>
    <Text
      font="primary"
      fontSize="T100"
      hyphens="none"
    >
      <Text
        font="primary"
        fontSize="T100"
        hyphens="none"
        key=""
      />
    </Text>
  </Col>
  <Row
    alignItems="center"
    gridGap={10}
  >
    <IconPaymentFill
      aria-hidden={true}
      display="block"
      size={16}
    />
    <Row
      alignItems="center"
      gridGap={3}
    >
      <Text
        font="primary"
        fontSize="T200"
        fontWeight="bold"
        hyphens="none"
      >
        Pay rate
        : 
      </Text>
      <Text
        font="primary"
        fontSize="T100"
        hyphens="none"
      >
        Up to USD$1,000/month
      </Text>
    </Row>
  </Row>
  <Row
    alignItems="center"
    gridGap={10}
  >
    <Row>
      <img
        height="20px"
        src=""
        width="20px"
      />
    </Row>
    <Row
      alignItems="center"
      gridGap={3}
    >
      <Text
        font="primary"
        fontSize="T200"
        fontWeight="bold"
        hyphens="none"
      >
        One-time sign on bonus
        : 
      </Text>
      <Text
        font="primary"
        fontSize="T100"
        hyphens="none"
      >
        USD$5.00
      </Text>
    </Row>
  </Row>
  <Row
    alignItems="center"
    gridGap={10}
  >
    <IconHourGlass
      aria-hidden={true}
      display="block"
      size={16}
    />
    <Row
      alignItems="center"
      gridGap={3}
    >
      <Text
        font="primary"
        fontSize="T200"
        fontWeight="bold"
        hyphens="none"
      >
        Hours
        : 
      </Text>
      <Text
        font="primary"
        fontSize="T100"
        hyphens="none"
      >
        16
         
        hours/week
      </Text>
    </Row>
  </Row>
  <Row
    alignItems="center"
    gridGap={10}
  >
    <IconClock
      aria-hidden={true}
      display="block"
      size={16}
    />
    <Row
      alignItems="center"
      gridGap={3}
    >
      <Text
        font="primary"
        fontSize="T200"
        fontWeight="bold"
        hyphens="none"
      >
        Duration
        : 
      </Text>
      <Text
        font="primary"
        fontSize="T100"
        hyphens="none"
      >
        Regular
      </Text>
    </Row>
  </Row>
  <Row
    alignItems="center"
    gridGap={10}
  >
    <Row>
      <img
        height="20px"
        src=""
        width="20px"
      />
    </Row>
    <Row
      alignItems="center"
      gridGap={3}
    >
      <Text
        font="primary"
        fontSize="T200"
        fontWeight="bold"
        hyphens="none"
      >
        Location
        : 
      </Text>
      <Text
        color="#1768C9"
        font="primary"
        fontSize="T100"
        hyphens="none"
      >
        38811 Cherry Street, Newark, CA 94560
      </Text>
    </Row>
  </Row>
</Col>
`;

exports[`ScheduleDetails country code US should match snapshot 1`] = `
<Col
  gridGap={10}
  width="95%"
>
  <Row
    alignItems="center"
    gridGap={10}
  >
    <IconCalendarFill
      aria-hidden={true}
      display="block"
      size={16}
    />
    <Row
      alignItems="center"
      gridGap={3}
    >
      <Text
        font="primary"
        fontSize="T200"
        fontWeight="bold"
        hyphens="none"
      >
        Start Date
        : 
      </Text>
      <Text
        font="primary"
        fontSize="T100"
        hyphens="none"
      >
        Oct 29, 2022
      </Text>
    </Row>
  </Row>
  <Row
    alignItems="center"
    gridGap={10}
  >
    <IconClockFill
      aria-hidden={true}
      display="block"
      size={16}
    />
    <Row
      alignItems="center"
      gridGap={3}
    >
      <Text
        font="primary"
        fontSize="T200"
        fontWeight="bold"
        hyphens="none"
      >
        Shift
        : 
      </Text>
      <Text
        font="primary"
        fontSize="T100"
        hyphens="none"
      >
        Thu, Fri, Sat, Sun 9:00 AM - 1:00 PM
      </Text>
    </Row>
  </Row>
  <Col
    alignItems="left"
    gridGap={5}
    padding={
      Object {
        "left": "S400",
      }
    }
  >
    <Text
      font="primary"
      fontSize="T200"
      hyphens="none"
      style={
        Object {
          "fontStyle": "italic",
        }
      }
    >
      Required training dates
    </Text>
    <Text
      font="primary"
      fontSize="T100"
      hyphens="none"
    >
      <Text
        font="primary"
        fontSize="T100"
        hyphens="none"
        key=""
      />
    </Text>
  </Col>
  <Row
    alignItems="center"
    gridGap={10}
  >
    <IconPaymentFill
      aria-hidden={true}
      display="block"
      size={16}
    />
    <Row
      alignItems="center"
      gridGap={3}
    >
      <Text
        font="primary"
        fontSize="T200"
        fontWeight="bold"
        hyphens="none"
      >
        Pay rate
        : 
      </Text>
      <Text
        font="primary"
        fontSize="T100"
        hyphens="none"
      >
        $8.90 /hour
      </Text>
    </Row>
  </Row>
  <Row
    alignItems="center"
    gridGap={10}
  >
    <IconHourGlass
      aria-hidden={true}
      display="block"
      size={16}
    />
    <Row
      alignItems="center"
      gridGap={3}
    >
      <Text
        font="primary"
        fontSize="T200"
        fontWeight="bold"
        hyphens="none"
      >
        Hours
        : 
      </Text>
      <Text
        font="primary"
        fontSize="T100"
        hyphens="none"
      >
        16
         
        hours/week
      </Text>
    </Row>
  </Row>
  <Row
    alignItems="center"
    gridGap={10}
  >
    <IconClock
      aria-hidden={true}
      display="block"
      size={16}
    />
    <Row
      alignItems="center"
      gridGap={3}
    >
      <Text
        font="primary"
        fontSize="T200"
        fontWeight="bold"
        hyphens="none"
      >
        Duration
        : 
      </Text>
      <Text
        font="primary"
        fontSize="T100"
        hyphens="none"
      >
        Regular
      </Text>
    </Row>
  </Row>
  <Row
    alignItems="center"
    gridGap={10}
  >
    <Row>
      <img
        height="20px"
        src=""
        width="20px"
      />
    </Row>
    <Row
      alignItems="center"
      gridGap={3}
    >
      <Text
        font="primary"
        fontSize="T200"
        fontWeight="bold"
        hyphens="none"
      >
        Location
        : 
      </Text>
      <Text
        color="#1768C9"
        font="primary"
        fontSize="T100"
        hyphens="none"
      >
        38811 Cherry Street, Newark, CA 94560
      </Text>
    </Row>
  </Row>
</Col>
`;
